@@ -15,12 +15,10 @@
 package com.floragunn.searchguard.enterprise.femt;
 
 import java.util.Arrays;
+import java.util.List;
 
 import com.floragunn.searchguard.authz.TenantManager;
 import com.floragunn.searchsupport.cstate.metrics.MetricsLevel;
-import org.elasticsearch.client.internal.node.NodeClient;
-import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.util.concurrent.ThreadContext;
 import org.junit.Assert;
 import org.junit.Test;
 
@@ -33,16 +31,12 @@ import com.floragunn.searchguard.authz.config.Role;
 import com.floragunn.searchguard.configuration.CType;
 import com.floragunn.searchguard.configuration.SgDynamicConfiguration;
 import com.floragunn.searchguard.user.User;
-import org.mockito.Mockito;
 
-public class MultiTenancyAuthorizationFilterTest {
+public class FeMultiTenancyTenantAccessMapperTest {
 
     private static final ActionGroup.FlattenedIndex emptyActionGroups = new ActionGroup.FlattenedIndex(
             SgDynamicConfiguration.empty(CType.ACTIONGROUPS));
     private static final Actions actions = new Actions(null);
-
-    private final ThreadContext threadContext = new ThreadContext(Settings.EMPTY);
-    private final NodeClient nodeClient = Mockito.mock(NodeClient.class);
 
     @Test
     public void wildcardTenantMapping() throws Exception {
@@ -50,21 +44,20 @@ public class MultiTenancyAuthorizationFilterTest {
                 .fromMap(
                         DocNode.of("all_access",
                                 DocNode.of("tenant_permissions",
-                                        Arrays.asList(
-                                                ImmutableMap.of("tenant_patterns", Arrays.asList("*"), "allowed_actions", Arrays.asList("*"))))),
+                                        List.of(
+                                                ImmutableMap.of("tenant_patterns", List.of("*"), "allowed_actions", Arrays.asList("*"))))),
                         CType.ROLES, null)
                 .get();
 
         ImmutableSet<String> tenants = ImmutableSet.of("my_tenant", "test");
 
         TenantManager tenantManager = new TenantManager(tenants);
-        RoleBasedTenantAuthorization actionAuthorization = new RoleBasedTenantAuthorization(roles, emptyActionGroups, actions, tenantManager, MetricsLevel.NONE);
-        MultiTenancyAuthorizationFilter subject = new MultiTenancyAuthorizationFilter(FeMultiTenancyConfig.DEFAULT, actionAuthorization, tenantManager, actions, threadContext,
-                nodeClient);
+        RoleBasedTenantAuthorization tenantAuthorization = new RoleBasedTenantAuthorization(roles, emptyActionGroups, actions, tenantManager, MetricsLevel.NONE);
+        FeMultiTenancyTenantAccessMapper mapper = new FeMultiTenancyTenantAccessMapper(tenantManager, tenantAuthorization, actions);
 
         User user = User.forUser("test").searchGuardRoles("all_access").build();
 
-        Assert.assertEquals(ImmutableMap.of("test", true, "my_tenant", true), subject.mapTenants(user, ImmutableSet.of("all_access")));
+        Assert.assertEquals(ImmutableMap.of("test", true, "my_tenant", true), mapper.mapTenantsAccess(user, ImmutableSet.of("all_access")));
     }
 
 }
